--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "rough-css",
+	"name": "@douganderson444/rough-css",
 	"version": "0.0.2",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "svelte-kit sync && svelte-package",
+		"build": "svelte-kit sync && svelte-package && vite build",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
@@ -11,6 +11,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "^1.0.0-next.43",
 		"@sveltejs/kit": "next",
 		"@sveltejs/package": "next",
 		"mdsvex": "^0.10.6",
