--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
 	"name": "@douganderson444/rough-css",
-	"version": "0.0.2",
+	"version": "0.0.5",
 	"license": "MIT",
+	"url": "https://github.com/DougAnderson444/rough-css",
+	"homepage": "https://github.com/DougAnderson444/rough-css",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && svelte-package && vite build",
 		"preview": "vite preview",
+		"package": "svelte-package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
@@ -22,11 +25,10 @@
 			"default": "./dist/index.js"
 		}
 	},
-	"dependencies": {
+	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.0",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.4",
-		"@sveltejs/package": "^2.3.0",
 		"mdsvex": "^0.11.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
@@ -35,6 +37,7 @@
 		"svelte-preprocess": "^5.1.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.3",
-		"vite": "^5.2.6"
+		"vite": "^5.2.6",
+		"@sveltejs/package": "^2.3.0"
 	}
 }
