--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@douganderson444/rough-css",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"license": "MIT",
 	"url": "https://github.com/DougAnderson444/rough-css",
 	"homepage": "https://github.com/DougAnderson444/rough-css",
@@ -24,6 +24,9 @@
 			"svelte": "./dist/index.js",
 			"default": "./dist/index.js"
 		}
+	},
+	"peerDependencies": {
+		"svelte": "^4.2.12"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.0",
